<resources>
    <string name="app_name">Hello-MAD</string>
    <string name="long_app_name">Ultimate Tic Tac Toe</string>
    <string name="scroggle_app_name">Scroggle</string>
    <string name="action_settings">Settings</string>
    <string name="restart_label">Restart</string>
    <string name="main_menu_label">Main Menu</string>
    <string name="declare_winner">%1$s is the winner</string>
    <string name="continue_label">Continue</string>
    <string name="ack_label">Acknowledgements</string>
    <string name="new_game_label">New Game</string>
    <string name="about_title">About Ultimate Tic Tac Toe</string>
    <string name="about_label">About</string>
    <string name="ok_label">OK</string>
    <string name="ins_label">Instructions</string>


    <string name="about_text">\
Scroggle is Boggle, but with an UTTT special twist.\n\
        User find words and score points depending the letters choosen.
        Bonus points for selecting the 9 letter word.
\n\

</string>
    <string name="ack_text">\
Sounds:https://www.dl-sounds.com/royalty-free/prelude-in-c \n
        Background:https://www.google.com/search?q=scrabble+images&amp;rlz=1C5CHFA_enUS693US696&amp;tbm=isch&amp;tbo=u&amp;source=univ&amp;sa=X&amp;ved=0ahUKEwinjO2VwfTWAhVlrlQKHYmFCR0QsAQIJw&amp;biw=1280&amp;bih=659#imgrc=oBB8ku-g_2TNRM:
</string>

    <string name="ins_text">\
The game is divided into two phases.You can only select the letter that are connected left,right,diagonally.
In the first phase select 9 words from each grid and click on check word to conform if the word exists.\n\
        Timer is set to 1 minute each for both the phases.
\n\In the phase 2 select 1 word combining the correct words from phase1 from each grid.Select the words from the bigger
        left,right or diagonally connected grid.
Bonus 20 points for a 9 letter word
        You will be penalised if a wrong word is selected(-2)
</string>
    <string name="quickstart_message">The InstanceID button logs the token to the log. The Send Notification Button sends the notification to the client device.</string>
    <string name="send_notification">Send Notification</string>
    <string name="log_token">Show Token</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>


    <string name="msg_subscribed">Subscribed to scroggle topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="go_to_fcm_demo">Cloud Messaging Example</string>
    <string name="go_to_realtime_database_demo">Realtime Database Example</string>

    <string name="username">User Name</string>
    <string name="score">Score</string>

    <string name="add5">Add 5</string>
    <string name="send_notification_text">Send Android Notification</string>
    <string name="subscribe_to_news">Subscribe to \"News\"</string>
    <string name="send_message_to_news">Send Message to News Topic</string>
    <string name="start_notification_act">Notification Example</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>
    <string name="start_permissions_act">Permissions Example</string>
    <string-array name="array_ringing_mode">
        <item>Select Ringing Mode</item>
        <item>SILENT</item>
        <item>RINGING</item>
    </string-array>
</resources>
