<!--
 ! Excerpted from "Hello, Android",
 ! published by The Pragmatic Bookshelf.
 ! Copyrights apply to this code. It may not be used to create training material, 
 ! courses, books, articles, and the like. Contact us if you are in doubt.
 ! We make no guarantees that this code is fit for any purpose. 
 ! Visit http://www.pragmaticprogrammer.com/titles/eband4 for more book information.
-->
<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   android:background="@drawable/app3"
   android:elevation="@dimen/elevation_high"
   android:orientation="vertical"
   android:padding="10dp"
   tools:context=".tictactoe.WordGameActivity">

   <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/menu_space"
      android:text="@string/scroggle_app_name"
      android:textAppearance="?android:textAppearanceLarge"
      android:textSize="@dimen/menu_text_size"
       android:textColor="@color/back_color"/>

   <Button
      android:id="@+id/continue_button"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_margin="@dimen/menu_button_margin"
      android:padding="@dimen/menu_button_padding"
      android:text="@string/continue_label"
       android:background="@color/available_color"/>

   <Button
      android:id="@+id/new_button"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_gravity="center"
      android:layout_margin="@dimen/menu_button_margin"
      android:padding="@dimen/menu_button_padding"
      android:text="@string/new_game_label"
       android:background="@color/available_color"/>

   <Button
      android:id="@+id/about_button"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_gravity="center"
      android:layout_margin="@dimen/menu_button_margin"
      android:padding="@dimen/menu_button_padding"
      android:text="@string/about_label"
       android:background="@color/available_color"/>
   <Button
       android:id="@+id/ack_button"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_gravity="center"
       android:layout_margin="@dimen/menu_button_margin"
       android:padding="@dimen/menu_button_padding"
       android:text="@string/ack_label"
       android:background="@color/available_color"/>
   <Button
       android:id="@+id/ins_button"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_gravity="center"
       android:layout_margin="@dimen/menu_button_margin"
       android:padding="@dimen/menu_button_padding"
       android:text="@string/ins_label"
       android:background="@color/available_color"/>
   <Button
       android:id="@+id/leader_button"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_gravity="center"
       android:layout_margin="@dimen/menu_button_margin"
       android:padding="@dimen/menu_button_padding"
       android:text="LeaderBoard"
       android:background="@color/available_color"/>
   <Button
       android:id="@+id/score_button"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_gravity="center"
       android:layout_margin="@dimen/menu_button_margin"
       android:padding="@dimen/menu_button_padding"
       android:text="ScoreBoard"
       android:background="@color/available_color"/>
   <!--<Button-->
       <!--android:id="@+id/notification_button"-->
       <!--android:layout_width="match_parent"-->
       <!--android:layout_height="match_parent"-->
       <!--android:layout_gravity="center"-->
       <!--android:layout_margin="@dimen/menu_button_margin"-->
       <!--android:padding="@dimen/menu_button_padding"-->
       <!--android:text="Notifications"/>-->
</LinearLayout>
